--- a/index.html
+++ b/index.html
@@ -24,5 +24,15 @@
         <dt>Kubernetes</dt>
         <dd>Introdução e orquestração ed containers</dd>
     </dl>
+
+    <h2>Cursos de Cloud</h2>
+    <dl>
+        <dt>Amazon EC2</dt>
+        <dd>Faça um deploy de sua webapp com alta disponibilidade e escalabilidade</dd>
+
+        <dt>Amazon S3</dt>
+        <dd>Manipule e armazene objetos na nuvem</dd>
+    </dl>
+
 </body>
 </html>
