--- a/index.html
+++ b/index.html
@@ -24,5 +24,15 @@
         <dt>Kubernetes</dt>
         <dd>Introdução e orquestração ed containers</dd>
     </dl>
+
+    <h2>Cursos de Linux</h2>
+    
+    <dl>
+        <dt>Linux I</dt>
+        <dd>Conhecendo e utilizando o terminal</dd>
+
+        <dt>Linux II</dt>
+        <dd>Programas, processos e pacotes</dd>
+    </dl>
 </body>
 </html>
