--- a/index.html
+++ b/index.html
@@ -57,5 +57,14 @@
         <dd>Deploy de uma aplicação em Spring MVC</dd>
     </dl>
 
+    <h2>Cursos de Redes</h2>
+    <dl>
+        <dt>Redes 1</dt>
+        <dd>Introdução, Conceitos e Prática</dd>
+
+        <dt>Redes 2</dt>
+        <dd>Montando um projeto do cliente até o provedor de serviços</dd>
+    </dl>
+
 </body>
 </html>
