--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <dd>Introdução e orquestração ed containers</dd>
     </dl>
 
-    <h2>Cursos do SO Linux</h2>
+    <h2>Cursos do Sistema Operacional Linux</h2>
     <dl>
         <dt>Linux I</dt>
         <dd>Conhecendo e utilizando o terminal</dd>
